--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ color: #66cdaa
 }
 
 p {
-color: #fff
+color: #66cdaa
 }
 
 body {
@@ -42,7 +42,7 @@ nav ul li:last-child {
 }
 
 nav ul li a {
-  color: #fff;
+  color: #66cdaa;
   text-decoration: none;
 }
 
