--- a/style.css
+++ b/style.css
@@ -141,3 +141,8 @@ h2 {
             cursor: pointer;
         }
 }
+.gif {
+    width: 250px;
+    heigt: 150px;
+    border-radius: 25px;
+    box-shadow: 0px 0px 20px rgba(0,0, 0, 0.4);
